fruits/templates/deployment-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongo
        image: mongo:8.0
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d/init-mongo.js
          subPath: init-mongo.js
          readOnly: true
      volumes:
      - name: init-script
        configMap:
          name: mongo-init-script

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
