fruits/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nodejs-app
spec:
  host: nodejs-app.apps.ocp.octopus.labs
  to:
    kind: Service
    name: nodejs-app
  port:
    targetPort: 3000
  tls:
    termination: edge
